# fint

./: .SRCINFO  .gitignore  PKGBUILD  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: tauri.ts
src/components/: FileItem.tsx  FileList.tsx  Preview.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx
src/hooks/: useFileSystem.ts  useKeyboardNavigation.ts
